[package]
name = "liback-sys"
version = "0.1.0"
authors = ["Phillipp Schoppmann <schoppmann@informatik.hu-berlin.de>"]
description = "Raw bindings for the Absentminded Crypto Kit"
repository = "https://github.com/schoppmp/liback-sys"
homepage = "https://github.com/schoppmp/liback-sys"
documentation = "https://schoppmp.github.io/doc/liback-sys/liback_sys/"
license = "AGPL-3.0"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "ack"
exclude = ["absentminded-crypto-kit/build/*"]

[dependencies]
libobliv-sys = { version = "0.1.5", path = "oblivc-rust/libobliv-sys" }
oblivc = { version = "0.1.2", path = "oblivc-rust" }

[build-dependencies]
libobliv-sys = { version = "0.1.5", path = "oblivc-rust/libobliv-sys" }
glob = "0.2.11"
ar = "0.5.0"
make-cmd = "0.1.0"
walkdir = "2"

[badges]
travis-ci = { repository = "schoppmp/liback-sys" }
